--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "module": "ESNext",
       "allowJs": true,
       "sourceMap": true,
-      "outDir": "build", 
+      "outDir": "build",
+      "resolveJsonModule": true,
       "esModuleInterop": true,
       "forceConsistentCasingInFileNames": true,
       "strict": true,
@@ -18,5 +19,5 @@
       "moduleResolution": "node",
       "allowSyntheticDefaultImports": true
     },
-  "files": ["index.ts"],
+  "files": ["index.ts"],    
 }
